Update ARM CPU info

--- a/recommendation/project.all.json
+++ b/recommendation/project.all.json
@@ -20,7 +20,7 @@
           "TargetFrameworks": [
             {
               "Name": "netcoreapp3.1",
-              "TargetCPU": [ "x86", "x64" ]
+              "TargetCPU": [ "x86", "x64", "ARM64" ]
             }
           ],
           "Description": "",
@@ -57,7 +57,7 @@
           "TargetFrameworks": [
             {
               "Name": "net5.0",
-              "TargetCPU": [ "x86", "x64", "ARM" ]
+              "TargetCPU": [ "x86", "x64", "ARM64" ]
             }
           ],
           "Description": "",
