Update action descriptions

--- a/recommendation/project.all.json
+++ b/recommendation/project.all.json
@@ -29,7 +29,7 @@
               "Name": "ArchiveFiles",
               "Type": "Project",
               "Value": "BundleConfig.cs,FilterConfig.cs,RouteConfig.cs,WebApiConfig.cs,global.asax.cs,global.asax,AssemblyInfo.cs,packages.config,Startup.cs,Program.cs",
-              "Description": "Archive files that are no longer used in core projects"
+              "Description": "Archive files that are no longer used in core projects."
             },
             {
               "Name": "CreateMvc3FolderHierarchy",
@@ -41,7 +41,7 @@
               "Name": "MigrateWebConfig",
               "Type": "Project",
               "Value": "",
-              "Description": "Migrate settings from web.config file to appsettings.json"
+              "Description": "Migrate settings from web.config file to appsettings.json."
             },
             {
               "Name": "MigrateProjectFile",
@@ -66,7 +66,7 @@
               "Name": "ArchiveFiles",
               "Type": "Project",
               "Value": "BundleConfig.cs,FilterConfig.cs,RouteConfig.cs,WebApiConfig.cs,global.asax.cs,global.asax,AssemblyInfo.cs,packages.config,Startup.cs,Program.cs",
-              "Description": "Archive files that are no longer used in core projects"
+              "Description": "Archive files that are no longer used in core projects."
             },
             {
               "Name": "CreateMvc5FolderHierarchy",
@@ -78,13 +78,13 @@
               "Name": "MigrateWebConfig",
               "Type": "Project",
               "Value": "",
-              "Description": "Migrate settings from web.config file to appsettings.json"
+              "Description": "Migrate settings from web.config file to appsettings.json."
             },
             {
               "Name": "MigrateProjectFile",
               "Type": "ProjectFile",
               "Value": "",
-              "Description": "Migrate csproj file to core"
+              "Description": "Migrate csproj file to core."
             }
           ]
         }
