Update project file action names

--- a/recommendation/project.all.json
+++ b/recommendation/project.all.json
@@ -32,13 +32,13 @@
               "Description": "Archive files that are no longer used in core projects."
             },
             {
-              "Name": "CreateMvc3FolderHierarchy",
+              "Name": "CreateNet3FolderHierarchy",
               "Type": "Project",
               "Value": "",
               "Description": "Create folder hierarchy based on type of project\r\nCreated Startup.cs and Program.cs files based on type of project"
             },
             {
-              "Name": "MigrateWebConfig",
+              "Name": "MigrateConfig",
               "Type": "Project",
               "Value": "",
               "Description": "Migrate settings from web.config file to appsettings.json."
@@ -69,13 +69,13 @@
               "Description": "Archive files that are no longer used in core projects."
             },
             {
-              "Name": "CreateMvc5FolderHierarchy",
+              "Name": "CreateNet5FolderHierarchy",
               "Type": "Project",
               "Value": "",
               "Description": "Create folder hierarchy based on type of project\r\nCreated Startup.cs and Program.cs files based on type of project"
             },
             {
-              "Name": "MigrateWebConfig",
+              "Name": "MigrateConfig",
               "Type": "Project",
               "Value": "",
               "Description": "Migrate settings from web.config file to appsettings.json."
