Remove Startup.cs and Program.cs from file to be archived

--- a/recommendation/project.all.json
+++ b/recommendation/project.all.json
@@ -28,7 +28,7 @@
             {
               "Name": "ArchiveFiles",
               "Type": "Project",
-              "Value": "BundleConfig.cs,FilterConfig.cs,RouteConfig.cs,WebApiConfig.cs,global.asax.cs,global.asax,AssemblyInfo.cs,packages.config,Startup.cs,Program.cs",
+              "Value": "BundleConfig.cs,FilterConfig.cs,RouteConfig.cs,WebApiConfig.cs,global.asax.cs,global.asax,AssemblyInfo.cs,packages.config",
               "Description": "Archive files that are no longer used in core projects."
             },
             {
@@ -65,7 +65,7 @@
             {
               "Name": "ArchiveFiles",
               "Type": "Project",
-              "Value": "BundleConfig.cs,FilterConfig.cs,RouteConfig.cs,WebApiConfig.cs,global.asax.cs,global.asax,AssemblyInfo.cs,packages.config,Startup.cs,Program.cs",
+              "Value": "BundleConfig.cs,FilterConfig.cs,RouteConfig.cs,WebApiConfig.cs,global.asax.cs,global.asax,AssemblyInfo.cs,packages.config",
               "Description": "Archive files that are no longer used in core projects."
             },
             {
