Remove configuration namespaces when replacing configuration code

--- a/recommendation/system.configuration.json
+++ b/recommendation/system.configuration.json
@@ -38,6 +38,13 @@
                 "Contains": "ConfigurationManager.Configuration.GetSection",
                 "NotContains": ""
               }
+            },
+            {
+              "Name": "RemoveDirective",
+              "Type": "Using",
+              "Value": "System.Configuration",
+              "Description": "Remove System.Configuration namespace.",
+              "ActionValidation":{"Contains":"", "NotContains":"using System.Configuration;"}
             }
           ]
         }
