--- a/recommendation/corewcf.configuration.json
+++ b/recommendation/corewcf.configuration.json
@@ -1,10 +1,10 @@
 {
-  "Name": "System.ServiceModel.Configuration",
+  "Name": "CoreWCF.Configuration",
   "Version": "1.0.0",
   "Packages": [
     {
       "Type": "SDK",
-      "Name": "System.ServiceModel.Configuration"
+      "Name": "CoreWCF.Configuration"
     }
   ],
   "Recommendations": [
