update target frameworks for rules files

--- a/recommendation/corewcf.codebased.project.json
+++ b/recommendation/corewcf.codebased.project.json
@@ -1,7 +1,6 @@
 {
   "Name": "CoreWCF.CodeBased.Project",
   "Version": "1.0.0",
-  "Source": "Github",
   "Packages": [
     {
       "Name": "Project",
@@ -20,15 +19,34 @@
           "TargetFrameworks": [
             {
               "Name": "netcoreapp3.1",
-              "TargetCPU": [ "x86", "x64", "ARM32", "ARM64" ]
+              "TargetCPU": [
+                "x86",
+                "x64",
+                "ARM32",
+                "ARM64"
+              ]
             },
             {
               "Name": "net5.0",
-              "TargetCPU": [ "x86", "x64", "ARM32", "ARM64" ]
+              "TargetCPU": [
+                "x86",
+                "x64",
+                "ARM32",
+                "ARM64"
+              ]
+            },
+            {
+              "Name": "net6.0",
+              "TargetCPU": [
+                "x86",
+                "x64",
+                "ARM32",
+                "ARM64"
+              ]
             }
           ],
           "Description": "",
-          "Actions": [  
+          "Actions": [
             {
               "Name": "AddPackage",
               "Type": "Package",
@@ -52,7 +70,7 @@
               "Type": "Package",
               "Value": "Microsoft.AspNetCore",
               "Description": "Add package Microsoft.AspNetCore."
-            }        
+            }
           ]
         }
       ]
