--- a/recommendation/project.all.json
+++ b/recommendation/project.all.json
@@ -1,7 +1,6 @@
 {
   "Name": "Project",
   "Version": "1.0.0",
-  "Source": "Github",
   "Packages": [
     {
       "Name": "Project",
@@ -20,11 +19,16 @@
           "TargetFrameworks": [
             {
               "Name": "netstandard2.1",
-              "TargetCPU": [ "x86", "x64", "ARM32", "ARM64" ]
+              "TargetCPU": [
+                "x86",
+                "x64",
+                "ARM32",
+                "ARM64"
+              ]
             }
           ],
           "Description": "",
-          "Actions": [            
+          "Actions": [
             {
               "Name": "MigrateConfig",
               "Type": "Project",
@@ -45,7 +49,12 @@
           "TargetFrameworks": [
             {
               "Name": "netcoreapp3.1",
-              "TargetCPU": [ "x86", "x64", "ARM32", "ARM64" ]
+              "TargetCPU": [
+                "x86",
+                "x64",
+                "ARM32",
+                "ARM64"
+              ]
             }
           ],
           "Description": "",
@@ -82,7 +91,21 @@
           "TargetFrameworks": [
             {
               "Name": "net5.0",
-              "TargetCPU": [ "x86", "x64", "ARM32", "ARM64" ]
+              "TargetCPU": [
+                "x86",
+                "x64",
+                "ARM32",
+                "ARM64"
+              ]
+            },
+            {
+              "Name": "net6.0",
+              "TargetCPU": [
+                "x86",
+                "x64",
+                "ARM32",
+                "ARM64"
+              ]
             }
           ],
           "Description": "",
