--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -22,8 +22,6 @@ jobs:
       with:
         dotnet-version: 5.0.301
     - name: Install dependencies
-      run: dotnet restore RecommendationTools/RecommendationTools.sln
-    - name: Build
-      run: dotnet build --configuration Release --no-restore RecommendationTools/RecommendationTools.sln
+      run: dotnet restore RecommendationTools/RecommendationValidator/RecommendationValidator.csproj
     - name: Validate
       run: for FILE in ./recommendation/*.recommendation.json ; do dotnet run --project RecommendationTools/RecommendationValidator/RecommendationValidator.csproj --path $FILE; done
