Added WebForms appsettings template and action
- Added a new template and folder so that web.config can be converted
outside of WebForms action
- Added action to project.all.json corresponding to new action code in
CTA

--- a/recommendation/project.all.json
+++ b/recommendation/project.all.json
@@ -40,6 +40,12 @@
               "Type": "ProjectFile",
               "Value": "",
               "Description": "Migrate csproj file to core"
+            },
+            {
+              "Name": "WebFormsPorting",
+              "Type": "ProjectType",
+              "Value": "",
+              "Description": "Perform WebForms specific porting steps"
             }
           ]
         },
@@ -82,6 +88,12 @@
               "Type": "ProjectFile",
               "Value": "",
               "Description": "Migrate csproj file to core"
+            },
+            {
+              "Name": "WebFormsPorting",
+              "Type": "ProjectType",
+              "Value": "",
+              "Description": "Perform WebForms specific porting steps"
             }
           ]
         },
@@ -124,6 +136,12 @@
               "Type": "ProjectFile",
               "Value": "",
               "Description": "Migrate csproj file to core."
+            },
+            {
+              "Name": "WebFormsPorting",
+              "Type": "ProjectType",
+              "Value": "",
+              "Description": "Perform WebForms specific porting steps"
             }
           ]
         },
@@ -166,6 +184,12 @@
               "Type": "ProjectFile",
               "Value": "",
               "Description": "Migrate csproj file to core."
+            },
+            {
+              "Name": "WebFormsPorting",
+              "Type": "ProjectType",
+              "Value": "",
+              "Description": "Perform WebForms specific porting steps"
             }
           ]
         }
