--- a/RecommendationTools/RecommendationBatchUpdater/RecommendationBatchUpdater.csproj
+++ b/RecommendationTools/RecommendationBatchUpdater/RecommendationBatchUpdater.csproj
@@ -1,9 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="CTA.Rules.Models" Version="2.0.3" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\RecommendationValidator\RecommendationValidator.csproj" />
