--- a/tagconfigs/asp.GridView.yaml
+++ b/tagconfigs/asp.GridView.yaml
@@ -1,6 +1,6 @@
 ﻿!Template
 TagName: asp:GridView
-CodeBehindType: System.UI.Web.WebControls.GridView
+CodeBehindType: System.Web.UI.WebControls.GridView
 CodeBehindHandler: Default
 
 Invocations:
