--- a/tagconfigs/asp.HyperLink.yaml
+++ b/tagconfigs/asp.HyperLink.yaml
@@ -1,6 +1,6 @@
 ﻿!Template
 TagName: asp:HyperLink
-CodeBehindType: System.UI.Web.WebControls.HyperLink
+CodeBehindType: System.Web.UI.WebControls.HyperLink
 CodeBehindHandler: Default
 
 Templates:
