--- a/tagconfigs/asp.Label.yaml
+++ b/tagconfigs/asp.Label.yaml
@@ -1,6 +1,6 @@
 ﻿!Template
 TagName: asp:Label
-CodeBehindType: System.UI.Web.WebControls.Label
+CodeBehindType: System.Web.UI.WebControls.Label
 CodeBehindHandler: Default
 
 Templates:
