--- a/tagconfigs/asp.ListView.yaml
+++ b/tagconfigs/asp.ListView.yaml
@@ -1,6 +1,6 @@
 ﻿!Template
 TagName: asp:ListView
-CodeBehindType: System.UI.Web.WebControls.ListView
+CodeBehindType: System.Web.UI.WebControls.ListView
 CodeBehindHandler: Default
 
 Invocations:
