--- a/tagconfigs/asp.RadioButton.yaml
+++ b/tagconfigs/asp.RadioButton.yaml
@@ -1,6 +1,6 @@
 ﻿!Template
 TagName: asp:RadioButton
-CodeBehindType: System.UI.Web.WebControls.RadioButton
+CodeBehindType: System.Web.UI.WebControls.RadioButton
 CodeBehindHandler: Default
 
 Conditions:
