--- a/tagconfigs/asp.TextBox.yaml
+++ b/tagconfigs/asp.TextBox.yaml
@@ -1,6 +1,6 @@
 ﻿!Template
 TagName: asp:TextBox
-CodeBehindType: System.UI.Web.WebControls.TextBox
+CodeBehindType: System.Web.UI.WebControls.TextBox
 CodeBehindHandler: Default
 
 Conditions:
