Making sidecar to fill krb5.conf from parameters, passing DOMAIN in secret, general fixes and cleanup

--- a/Templates/kerberosSideCar/Dockerfile
+++ b/Templates/kerberosSideCar/Dockerfile
@@ -13,7 +13,6 @@ COPY krb5.conf /etc/krb5.conf
 
 # Side-car source code
 COPY krb_side_car.py /
-RUN chmod +x /krb_side_car.py
 
 VOLUME ["/var/scratch"]
 
@@ -29,7 +28,7 @@ ENV PYTHONUNBUFFERED=1
 ENV SERVICE_PRINCIPAL_NAME={REPLACE_WITH_SERVICE_PRINCIPAL_NAME_STRING}
 
 #ENV KRB_DIR="Directory kerberos tickets and keytab are saved in this directory such as /var/scratch"
-ENV_KRB_DIR="/var/scratch"
+ENV KRB_DIR="/var/scratch"
 # this must be the same directory for default_ccache_name and default_keytab_name in krb5.conf.
 # This directory must also be shared with the app container"
 
