add more vb updates

--- a/recommendation/project.all.json
+++ b/recommendation/project.all.json
@@ -63,6 +63,7 @@
               "Name": "ArchiveFiles",
               "Type": "Project",
               "Value": "BundleConfig.cs,FilterConfig.cs,RouteConfig.cs,WebApiConfig.cs,global.asax.cs,global.asax,AssemblyInfo.cs,packages.config",
+              "VbValue": "BundleConfig.vb,FilterConfig.vb,RouteConfig.vb,WebApiConfig.vb,global.asax.vb,global.asax,AssemblyInfo.vb,packages.config",
               "Description": "Archive files that are no longer used in core projects."
             },
             {
@@ -111,6 +112,7 @@
               "Name": "ArchiveFiles",
               "Type": "Project",
               "Value": "BundleConfig.cs,FilterConfig.cs,RouteConfig.cs,WebApiConfig.cs,global.asax.cs,global.asax,AssemblyInfo.cs,packages.config",
+              "VbValue": "BundleConfig.vb,FilterConfig.vb,RouteConfig.vb,WebApiConfig.vb,global.asax.vb,global.asax,AssemblyInfo.vb,packages.config",
               "Description": "Archive files that are no longer used in core projects."
             },
             {
@@ -159,6 +161,7 @@
               "Name": "ArchiveFiles",
               "Type": "Project",
               "Value": "BundleConfig.cs,FilterConfig.cs,RouteConfig.cs,WebApiConfig.cs,global.asax.cs,global.asax,AssemblyInfo.cs,packages.config",
+              "VbValue": "BundleConfig.vb,FilterConfig.vb,RouteConfig.vb,WebApiConfig.vb,global.asax.vb,global.asax,AssemblyInfo.vb,packages.config",
               "Description": "Archive files that are no longer used in core projects."
             },
             {
