--- a/recommendation/system.configuration.json
+++ b/recommendation/system.configuration.json
@@ -66,6 +66,10 @@
               "ActionValidation": {
                 "Contains": "",
                 "NotContains": "using System.Configuration;"
+              },
+              "VbActionValidation": {
+                "Contains": "",
+                "NotContains": "Imports System.Configuration"
               }
             }
           ]
