Update rules and recommendations for .NET 7

--- a/recommendation/system.configuration.json
+++ b/recommendation/system.configuration.json
@@ -44,6 +44,15 @@
                 "ARM32",
                 "ARM64"
               ]
+            },
+            {
+              "Name": "net7.0",
+              "TargetCPU": [
+                "x86",
+                "x64",
+                "ARM32",
+                "ARM64"
+              ]
             }
           ],
           "Description": "Update configuration to retrieve connection string from appSettings.json file.",
@@ -106,6 +115,15 @@
             },
             {
               "Name": "net6.0",
+              "TargetCPU": [
+                "x86",
+                "x64",
+                "ARM32",
+                "ARM64"
+              ]
+            },
+            {
+              "Name": "net7.0",
               "TargetCPU": [
                 "x86",
                 "x64",
