--- a/RecommendationTools/RecommendationBatchUpdater/RecommendationBatchUpdater.csproj
+++ b/RecommendationTools/RecommendationBatchUpdater/RecommendationBatchUpdater.csproj
@@ -2,11 +2,11 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CTA.Rules.Models" Version="2.0.3" />
+    <PackageReference Include="CTA.Rules.Models" Version="2.6.5" />
   </ItemGroup>
 
   <ItemGroup>
