--- a/recommendation/project.all.json
+++ b/recommendation/project.all.json
@@ -189,6 +189,55 @@
               "Description": "Perform WebForms specific porting steps"
             }
           ]
+        },
+        {
+          "Source": "Amazon",
+          "Preferred": "Yes",
+          "TargetFrameworks": [
+            {
+              "Name": "net7.0",
+              "TargetCPU": [
+                "x86",
+                "x64",
+                "ARM32",
+                "ARM64"
+              ]
+            }
+          ],
+          "Description": "",
+          "Actions": [
+            {
+              "Name": "ArchiveFiles",
+              "Type": "Project",
+              "Value": "BundleConfig.cs,FilterConfig.cs,RouteConfig.cs,WebApiConfig.cs,global.asax.cs,global.asax,AssemblyInfo.cs,packages.config",
+              "VbValue": "BundleConfig.vb,FilterConfig.vb,RouteConfig.vb,WebApiConfig.vb,global.asax.vb,global.asax,AssemblyInfo.vb,packages.config",
+              "Description": "Archive files that are no longer used in core projects."
+            },
+            {
+              "Name": "CreateNet6FolderHierarchy",
+              "Type": "Project",
+              "Value": "",
+              "Description": "Create folder hierarchy based on type of project\r\nCreated Startup.cs and Program.cs files based on type of project"
+            },
+            {
+              "Name": "MigrateConfig",
+              "Type": "Project",
+              "Value": "",
+              "Description": "Migrate settings from web.config file to appsettings.json."
+            },
+            {
+              "Name": "MigrateProjectFile",
+              "Type": "ProjectFile",
+              "Value": "",
+              "Description": "Migrate csproj file to core."
+            },
+            {
+              "Name": "WebFormsPorting",
+              "Type": "ProjectType",
+              "Value": "",
+              "Description": "Perform WebForms specific porting steps"
+            }
+          ]
         }
       ]
     }
