--- a/recommendation/corewcf.configuration.json
+++ b/recommendation/corewcf.configuration.json
@@ -62,6 +62,15 @@
                 "ARM32",
                 "ARM64"
               ]
+            },
+            {
+              "Name": "net9.0",
+              "TargetCPU": [
+                "x86",
+                "x64",
+                "ARM32",
+                "ARM64"
+              ]
             }
           ],
           "Description": "Replace System.ServiceModel.Configuration with CoreWCF.Configuration Namespace. Check CoreWCF.Configuration Compatibility at https://github.com/CoreWCF/CoreWCF/releases",
