--- a/NuGet.Config
+++ b/NuGet.Config
@@ -2,7 +2,7 @@
 <configuration>
   <packageSources>
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
-    <add key="dotnet" value="https://dotnetfeed.blob.core.windows.net/dotnet-core/index.json" />
+    <!-- <add key="dotnet" value="https://dotnetfeed.blob.core.windows.net/dotnet-core/index.json" /> -->
     <add key="encore-nuget" value="https://s3-us-west-2.amazonaws.com/aws.portingassistant.dotnet.download/nuget/index.json" />
   </packageSources>
 </configuration>
