--- a/recommendation/system.web.configuration.json
+++ b/recommendation/system.web.configuration.json
@@ -71,6 +71,15 @@
                 "ARM32",
                 "ARM64"
               ]
+            },
+            {
+              "Name": "net10.0",
+              "TargetCPU": [
+                "x86",
+                "x64",
+                "ARM32",
+                "ARM64"
+              ]
             }
           ],
           "Description": "",
@@ -160,6 +169,15 @@
             },
             {
               "Name": "net9.0",
+              "TargetCPU": [
+                "x86",
+                "x64",
+                "ARM32",
+                "ARM64"
+              ]
+            },
+            {
+              "Name": "net10.0",
               "TargetCPU": [
                 "x86",
                 "x64",
