Update GitHub Actions to use .NET 8 and newer action versions

--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
     - name: Check for secrets leak on the repo
       run: |
           git clone https://github.com/awslabs/git-secrets.git target
@@ -23,14 +23,10 @@ jobs:
           echo "Added aws secret templates"
           git secrets --scan -r ../
           echo "Repository scan completed"
-    - name: Setup .NET Core
-      uses: actions/setup-dotnet@v1
+    - name: Setup .NET 8
+      uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: 3.1.301
-    - name: Setup .NET Core 5
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: 5.0.301
+        dotnet-version: '8.0.x'
     - name: Install dependencies
       run: dotnet restore RecommendationTools/RecommendationValidator/RecommendationValidator.csproj
     - name: Validate
